--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><strong>Adam Myers</strong></title>
+		<title>Professional Portfolio</title>
 	</head>
 
 	<body>
 
-		<h1>An Experianced Manager Transitioning To Development</h1>
+		<h1>Adam Myers</h1>
 
-				<p>Brief biographical information</p>
+				<p>An Experianced Manager Transitioning To Development</p>
 			
 			<nav>
 				<ul>
@@ -30,27 +30,26 @@
 
 					<h3>Project1</h3>
 						<article>
-							<p>Project Name</p>
+							<p>Project Name Linked to GitHub</p>
 							<img src="" alt="Project1 Screenshot">
 							<p>skills/technology used</p>
 						</article>
 
 					<h3>Project2</h3>
 						<article>
-							<p>Project Name</p>
+							<p>Project Name Linked to GitHub</p>
 							<img src="" alt="Project1 Screenshot">
 							<p>skills/technology used</p>
 						</article>
 
 					<h3>Project3</h3>
 						<article>
-							<p>Project Name</p>
+							<p>Project Name Linked to GitHub</p>
 							<img src="" alt="Project1 Screenshot">
 							<p>skills/technology used</p>
 						</article>	
 			
 			<h2>Contact Information</h2>
-
 				<p>Email</p>
 				<p>LinkedIn</p>
 				<p></p>
@@ -62,7 +61,7 @@
 
 		<footer>
 
-			<p>&lt;2019&lt; Adam Myers</p>
+			<p>2019 Adam Myers</p>
 		
 		</footer>
 
