end of day contibutions

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Professional Portfolio</title>
+		<link rel="stylesheet" href=".CssSheets/CssSheet.css">
 	</head>
 
 	<body>
@@ -12,9 +13,9 @@
 			
 			<nav>
 				<ul>
-					<li>Naritive</li>
-					<li>Project</li>
-					<li>Contact Information</li>
+          <li><a href="#">Naritive</a></li>
+          <li><a href="#">Project</a></li>
+          <li><a href="#">Contact Information</a></li>
 				</ul>	
 			</nav>
 			
@@ -22,7 +23,7 @@
 
 				<p>Education</p>
 				<p>List of Skills</p>
-				<img src="" alt="Profesional Headshot">
+				<img src="Images/IMG_0078.JPG" alt="Profesional Headshot">"images/kitten.jpg" alt="Adorable Kitten">
 
 			<h2>Projects</h2>
 
@@ -37,9 +38,12 @@
 
 					<h3>Project2</h3>
 						<article>
-							<p>Project Name Linked to GitHub</p>
-							<img src="" alt="Project1 Screenshot">
-							<p>skills/technology used</p>
+							  <p>Project Name Linked to GitHub</p>
+							<figure>
+                <img src="" alt="Project1 Screenshot">
+                <figcaption>Project1 Screenshot</figcaption>
+              </figure>
+                <p>skills/technology used</p>
 						</article>
 
 					<h3>Project3</h3>
