--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Professional Portfolio</title>
-		<link rel="stylesheet" href=".CssSheets/CssSheet.css">
+		<link rel="stylesheet" href="./CssSheets/CssSheet.css">
 	</head>
 
 	<body>
@@ -23,8 +23,11 @@
 
 				<p>Education</p>
 				<p>List of Skills</p>
-				<img src="Images/IMG_0078.JPG" alt="Profesional Headshot">"images/kitten.jpg" alt="Adorable Kitten">
-
+				
+				<figure>
+					<img src="Images/IMG_0078.JPG" alt="Profesional Headshot">
+				</figure>
+			
 			<h2>Projects</h2>
 
 				<p>Intro to projects</p>
