--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="./Images/favicon.ico">
 		<title>Professional Portfolio</title>
-		<link rel="stylesheet" href="./CssSheets/CssSheet.css">
+		<link rel="stylesheet" href="./CssSheets/Layout.css">
 	</head>
 
 	<body>
@@ -13,12 +14,12 @@
 			
 			<nav>
 				<ul>
-          <li><a href="#">Naritive</a></li>
-          <li><a href="#">Project</a></li>
-          <li><a href="#">Contact Information</a></li>
+          <li><a href="#Naritive"></a></li>
+          <li><a href="#Project"></a></li>
+          <li><a href="#Contact"></a></li>
 				</ul>	
 			</nav>
-			
+			<section id="Naritive"></section>
 			<h2>About Me:</h2>
 
 				<p>Education</p>
@@ -31,7 +32,7 @@
 			<h2>Projects</h2>
 
 				<p>Intro to projects</p>
-
+					<section id="Project"></section>
 					<h3>Project1</h3>
 						<article>
 							<p>Project Name Linked to GitHub</p>
@@ -42,10 +43,11 @@
 					<h3>Project2</h3>
 						<article>
 							  <p>Project Name Linked to GitHub</p>
-							<figure>
-                <img src="" alt="Project1 Screenshot">
-                <figcaption>Project1 Screenshot</figcaption>
-              </figure>
+					<figure>
+	                	<img src="" alt="Project1 Screenshot">
+	                		<figcaption>Project1 Screenshot</figcaption>
+	              	</figure>
+                
                 <p>skills/technology used</p>
 						</article>
 
@@ -56,6 +58,7 @@
 							<p>skills/technology used</p>
 						</article>	
 			
+			<section id="Contact"></section>
 			<h2>Contact Information</h2>
 				<p>Email</p>
 				<p>LinkedIn</p>
