--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="icon" type="image/png" href="./Images/favicon.ico">
 		<title>Professional Portfolio</title>
-		<link rel="stylesheet" href="./CssSheets/Layout.css">
+		<link rel="stylesheet" href ="./CssSheets/Layout.css">
 	</head>
 
 	<body>
@@ -14,11 +14,12 @@
 			
 			<nav>
 				<ul>
-          <li><a href="#Naritive"></a></li>
-          <li><a href="#Project"></a></li>
-          <li><a href="#Contact"></a></li>
+          			<li><a href="#Naritive">Naritive</a></li>
+          			<li><a href="#Project">Project</a></li>
+          			<li><a href="#Contact">Contact</a></li>
 				</ul>	
 			</nav>
+			
 			<section id="Naritive"></section>
 			<h2>About Me:</h2>
 
@@ -32,30 +33,36 @@
 			<h2>Projects</h2>
 
 				<p>Intro to projects</p>
+					
 					<section id="Project"></section>
 					<h3>Project1</h3>
 						<article>
-							<p>Project Name Linked to GitHub</p>
-							<img src="" alt="Project1 Screenshot">
-							<p>skills/technology used</p>
+								<p>Project Name Linked to GitHub</p>
+							<figure>	
+								<img src="" alt="Project1 Screenshot">
+									<figcaption>Project1 Screenshot</figcaption>
+							</figure>
+								<p>skills/technology used</p>
 						</article>
 
 					<h3>Project2</h3>
 						<article>
-							  <p>Project Name Linked to GitHub</p>
-					<figure>
-	                	<img src="" alt="Project1 Screenshot">
-	                		<figcaption>Project1 Screenshot</figcaption>
-	              	</figure>
-                
-                <p>skills/technology used</p>
+								<p>Project Name Linked to GitHub</p>
+							<figure>
+	                			<img src="" alt="Project2 Screenshot">
+	                				<figcaption>Project2 Screenshot</figcaption>
+	              			</figure>
+                				<p>skills/technology used</p>
 						</article>
 
 					<h3>Project3</h3>
 						<article>
-							<p>Project Name Linked to GitHub</p>
-							<img src="" alt="Project1 Screenshot">
-							<p>skills/technology used</p>
+								<p>Project Name Linked to GitHub</p>
+							<figure>
+								<img src="" alt="Project3 Screenshot">
+									<figcaption>Project3 Screenshot</figcaption>
+							</figure>
+								<p>skills/technology used</p>
 						</article>	
 			
 			<section id="Contact"></section>
