--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="icon" type="image/png" href="./Images/favicon.ico">
 		<title>Professional Portfolio</title>
-		<link rel="stylesheets" href ="./CssSheets/Layout.css">
+		<link rel="stylesheets" href ="Layout.css">
 	</head>
 
 	<body>
