--- a/index.html
+++ b/index.html
@@ -1,85 +1,81 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="icon" type="image/png" href="./Images/favicon.ico">
-		<title>Professional Portfolio</title>
-		<link rel="stylesheets" href ="Layout.css">
-	</head>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Professional Portfolio</title>
+	<link rel="icon" type="image/png" href="./Images/favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="./css/style.css" />
+</head>
 
-	<body>
-
-		<h1>Adam Myers</h1>
-
-				<p>An Experianced Manager Transitioning To Development</p>
-			
-			<nav>
-				<ul>
-          			<li><a href="#Naritive">Naritive</a></li>
-          			<li><a href="#Project">Project</a></li>
-          			<li><a href="#Contact">Contact</a></li>
-				</ul>	
-			</nav>
-			
-			<section id="Naritive"></section>
-			<h2>About Me:</h2>
-
-				<p>Education</p>
-				<p>List of Skills</p>
-				
-				<figure>
-					<img src="Images/IMG_0078.JPG" alt="Profesional Headshot">
-				</figure>
-			
-			<h2>Projects</h2>
-
-				<p>Intro to projects</p>
-					
-					<section id="Project"></section>
-					<h3>Project1</h3>
-						<article>
-								<p>Project Name Linked to GitHub</p>
-							<figure>	
-								<img src="" alt="Project1 Screenshot">
-									<figcaption>Project1 Screenshot</figcaption>
-							</figure>
-								<p>skills/technology used</p>
-						</article>
-
-					<h3>Project2</h3>
-						<article>
-								<p>Project Name Linked to GitHub</p>
-							<figure>
-	                			<img src="" alt="Project2 Screenshot">
-	                				<figcaption>Project2 Screenshot</figcaption>
-	              			</figure>
-                				<p>skills/technology used</p>
-						</article>
-
-					<h3>Project3</h3>
-						<article>
-								<p>Project Name Linked to GitHub</p>
-							<figure>
-								<img src="" alt="Project3 Screenshot">
-									<figcaption>Project3 Screenshot</figcaption>
-							</figure>
-								<p>skills/technology used</p>
-						</article>	
-			
-			<section id="Contact"></section>
-			<h2>Contact Information</h2>
-				<p>Email</p>
-				<p>LinkedIn</p>
-				<p></p>
-
- 			<div></div>
-
-		</body>
-
-
-		<footer>
-
-			<p>2019 Adam Myers</p>
+<body>
+		<style>
+				a:link {
+				  color: rgb(224, 222, 220); 
+				  background-color: transparent; 
+				  text-decoration: none;
+				}
+				a:visited {
+				  color: rgb(224, 222, 220);
+				  background-color: transparent;
+				  text-decoration: none;
+				}
+				a:hover {
+				  color:rgb(233, 97, 73);
+				  background-color: transparent;
+				  text-decoration: underline;
+				}
+		</style>
+	<header class="main-header">
+		<!-- <img src="./Images/wood_background.jpg" alt="palletwood"> -->
+		<h1 class="top-header">Adam B Myers</h1>
+		<div class="intro-statement">• A Proven Manager Transitioning To Development •</div>
+	</header>	
 		
-		</footer>
+			<ul class="nav-tools">
+				<li><a href="#Home">Home</a></li>
+				<li><a href="#Skills">Skills</a></li>
+				<li><a href="#Education">Education</a></li>
+				<li><a href="#Projects">Projects</a></li>
+				<li><a href="#Contact">Contact</a></li>
+			</ul>
+			
+		<section class="grid1">
+			<div class="boxa1" id="Skills"><img class= "headshot" src="./Images/IMG_0078.JPG" alt="Professional Headshot"></div>
+			<div class="boxa2"><strong>Professional Competencies</strong>
+				<p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) •
+						Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured
+						Query Language (SQL) • Relational Databases • Source Control / Git</p></div>
+			<div class="boxa3" id="Education">
+				<p>We Can {Code} It</p>
+				<p>Certificate of Software Development, April 2019</p>
+			</div>
+			<div class="boxa4">
+				<p>Originally from Northern Ohio, Adam worked his way to the top the burgeoning indoor waterpark industry. With a keen disposition for project management and an appreciation of streamlined operations, Adam opened some of the largest and most innovative operations in the world.  One of the highlights of his past career is working as an auditor of the most prestigious aquatic facilities in the country.  The lessons learned in that capacity were numerous and are still relevant today.</p>
+				<p>Adam now brings the same dedication to quality product and eye for minute details to the development space.  He has a passion for Java programming and a gift for front end development.  A lifelong learner by nature, he enjoys consuming research of emerging technologies such as 3-D printing, crypto currencies, and artificial intelligence.  He lives in New Albany with his cherished family and pets.</p>
+			</div>
+			<div class="boxa5"><p>Bacholors Science</p>
+				<p>Business Administration</p>
+				<p>Bowling Green</p> 
+				<p>State University</p></div>
+		</section>
+	
+		<section class="grid2" id="Projects">
+			<div class="boxb1"><a href="https://github.com/adambmyers/virutal-pet" target="_blank">Virtual Pets</a></div>
+			<div class="boxb2"><a href="https://github.com/adambmyers/highstreet-hospital" target="_blank">High Street Hospital</a></div>
+			<div class="VPSS"><img class= "VP" src="./Images/IMG_VP.JPG" alt="Virtual Pets"></div>	
+			<div class="boxb4">• Java • Eclipse • Git Bash • Git Hub • Sublime •</div>
+			<div class="HHSS"><img class= "HH" src="./Images/IMG_HH.JPG" alt="High Street Hospital"></div>
+			<div class="boxb6">• Java • Eclipse • Git Bash • Git Hub • Sublime •</div>
+			<div class="boxb7"><p>A command line application simulating Tamagotchi or other vintage digital pets from the 1990’s.  The game play features two modes of interaction with the pet shelter residents, the ability to take in new pets and adopt out current pets, and a unique tutorial feature that gets the player up to speed in no time.  The fun continues with proprietary (licencing pending) characters from pop culture and the creators imagination.  The project earned the rating of 97% from We Can {Code} It instructor Don Hamilton III, and is a proud edition to my personal portfolio.</p>  </div>	
+			<div class="boxb8"><p> You are the new General Manager of a hospital with a secret.  The sweet and caring janitor you met in the interview is a vampire!  Your intuition could not have been more wrong and now it is your responsibility to keep the hospital and its employees out of hot water!  How do you keep the secret and out of jail?  Direct the staff in its day to day operations with an emphasis on keeping the cover up going and the vampire satisfied.  Your in it deep now!</p>  </div>
+			<div class="boxb9">Untitled Future Project</div>
+		</section>
+	</body>
 
+	<footer>		
+			<h2 id="Contact"><strong>Contact Information</strong></h2>
+			<h3><a href="https://github.com/adambmyers/adambmyers.github.io">github</a><a href="mailto:blase_adam@yahoo.com">Email</a><a href="https://www.linkedin.com/in/adam-myers-9092a629/" target="_blank"</a>LinkedIn</p><p><small>&copy;2019 Adam Myers</small></p></h3>
+	</footer>
 </html>
