--- a/index.html
+++ b/index.html
@@ -12,41 +12,44 @@
 
 <body>
 	<header class="main-header">
-		<!-- <img src="./Images/wood_background.jpg" alt="palletwood"> -->
-		<h1 class="top-header">Adam B Myers</h1>
-		<div class="intro-statement">• A Proven Manager Transitioning To Development •</div>
-	</header>	
-	
-	<ul class="nav-tools">
-		<li><a href="#Home">Home</a></li>
-		<li><a href="./background.html">Background</a></li>
-		<li><a href="./projects.html">Projects</a></li>
-		<li><a href="#Contact">Contact</a></li>
-	</ul>
-	
+		<h1 class="main-header__title">Adam B Myers</h1>
+		<nav class="nav">
+			<button class="nav__button">Menu</button>
+			<ul class="nav__list hide">
+				<li class="nav__item"><a href="./background.html">Background</a></li>
+				<li class="nav__item"><a href="./projects.html">Projects</a></li>
+				<li class="nav__item"><a href="#Contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+		<section class="pro-statement">
+			<h2>• A Proven Manager Transitioning To Development •</h2>
+		</section> 
+
 	<section class="grid1">
 		<div class="boxa1" id="Skills"><img class= "headshot" src="./Images/IMG_0078.JPG" alt="Professional Headshot"></div>
 			<article class="proComp">
 				<h2>Professional Competencies</h2>
-					<p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured • Query Language (SQL) • Relational Databases • Source Control / Git</p>
+				<p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured • Query Language (SQL) • Relational Databases • Source Control / Git</p>
 			</article>
-					<div class="wcci" id="Education">
-						<h2>We Can {Code} It</h2>
-							<p>Certificate of Software Development, April 2019</p>
-					</div>
-					<div class="education">
-						<p>Bacholors Science Business Administration<br>Bowling Green State University</p>
-					</div>
-	</section>					
+				<div class="wcci" id="Education">
+					<button class="button-wcci"><a href="https://wecancodeit.org/employers/" target="_blank"><span class="We">We</span><span class="Can">Can</span><span class="Code">{Code}</span><span class="It">IT</span></a></button>
+					<p>Certificate of Software Development, April 2019</p>
+				</div>
+				<div class="education">
+					<p>Bacholors Science Business Administration<br>Bowling Green State University</p>
+				</div>
+	</section>
+	<script src="js/main.js"></script>					
 </body>
 				
 <footer>
 	<div class="footerContainer">
-			<h3 id="Contact">Contact Information</h3>
-					<button a href="https://github.com/adambmyers/adambmyers.github.io">GitHub</a></button>
-					<button a href="mailto:blase_adam@yahoo.com">eMail</a></button>
-					<button a href="https://www.linkedin.com/in/adam-myers-9092a629/" target="_blank"></a>LinkedIn</button>
-					<h3><small>&copy;2019 Adam Myers</small></h3>
+			<h3>Contact Information</h3>
+			<button class="button-github"><a href="https://github.com/adambmyers/adambmyers.github.io" target="_blank"><img class="image-github" src="Images/github.png"></a></button>
+			<button class="button-email"><a href="mailto:blase_adam@yahoo.com"><img class="image-email" src="Images/email (1).png"></a></button>
+			<button class="button-linkedin"><a href="https://www.linkedin.com/in/adam-myers-9092a629/" target="_blank"><img class="image-linkedin" src="Images/linkedin.png"></a></button>
+			<h3><small>&copy; 2019 Adam Myers</small></h3>
 	</div>
 </footer>
 </html>
